Tue Sep 30 22:55:34 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/transport/rtps/subscriber.cpp:

        Catch exceptions.

Tue Sep 30 22:27:26 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/transport/rtps/publisher.cpp:

        Catch exceptions.

Tue Sep 30 21:38:37 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/FilterExpression/FilterExpression.cpp:

        Catch exceptions.

Tue Sep 30 20:56:17 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * performance-tests/DCPS/Priority/publisher_main.cpp:
        * performance-tests/DCPS/Priority/subscriber_main.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_sub.cpp:

        Catch exceptions.

Tue Sep 30 14:57:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/pub_multicast_async.ini:
        * tests/DCPS/ManyToMany/pub_multicast_async.ini:
        * tests/DCPS/ManyToMany/udp.ini:
        * tests/DCPS/PersistentInfoRepo/pub_multicast_async.ini:

          Adjust buffer sizes, nak depths.

Mon Sep 29 18:21:52 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_main/main.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:
        * tests/DCPS/PersistentDurability/publisher.cpp:

          Catch exceptions.

Mon Sep 29 17:32:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reconnect/run_test.pl:

          Increased Debug level for function coverage.

Mon Sep 29 17:26:30 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/run_test.pl:

          Increased Debug level for function coverage.

Thu Sep 25 15:22:23 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/Writer.h:
        * tests/DCPS/LargeSample/Writer.cpp:
        * tests/DCPS/LargeSample/publisher.cpp:
