@@ -1,3 +1,10 @@
+Thu Oct  2 17:57:36 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>
+
+        * tests/DCPS/Inconsistent_Qos/inconsistent_qos.cpp:
+        * tests/transport/error_handling/SimpleTransportClient.h:
+         
+         Catch exceptions.
+
 Tue Sep 30 22:55:34 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>
 
         * tests/transport/rtps/subscriber.cpp:
